Cleanup of yesterdays code, made a lot of it a partials

--- a/app/assets/stylesheets/styles/halo-4/service-record.scss
+++ b/app/assets/stylesheets/styles/halo-4/service-record.scss
@@ -1,480 +1,29 @@
-$first-restructure-point: 1425px;
-$second-restructure-point: 1315px;
-$third-restructure-point: 1195px;
-$fourth-restructure-point: 1001px;
-$fifth-restructure-point: 991px;
+.placeholder {
+	height: 1000px;
+}
 
-#halo4-service-record {
-	.header {
-		height: 610px;
-		transition: background-image 0.5s;
-		background-attachment: fixed;
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position-y: bottom;
-
-
-		.recent-match-index {
-			margin-top: 120px;
-			display: flex;
-			align-items: center;
-
-			.item-container {
-				width: 34px;
-				height: 34px;
-				display: inline-block;
-
-				.item-indicator {
-					transition: 0.5s;
-					margin: 12px;
-					width: 10px;
-					height: 10px;
-					background-color: $brand-quaternary;
-					border-radius: 100px;
-					opacity: 0.8;
-					display: flex;
-					align-items: center;
-					cursor: pointer;
-
-					&.active {
-						margin: 7px;
-						width: 20px;
-						height: 20px;
-						border: 4px solid #a85187;
-						background-color: #fd5aa3;
-					}
-				}
-			}
+.page-content {
+	section {
+		margin-bottom: 30px;
+		&:last-of-type {
+			margin-bottom: 0;
 		}
 
-		.player-information {
-			margin-top: 70px;
+		.section-header {
+			font-weight: 300;
+			font-size: 30px;
+			// color: $text-dark;
+			color: $brand-primary;
 
-			h1 {
-				color: white;
-				font-size: 55px;
-				font-weight: 600;
-			}
-
-			ul {
-				color: $text-light-grey;
-				padding: 0;
-				list-style-type: none;
-				font-size: 18px;
-				font-weight: 100;
-
-				> li {
-					display: inline;
-					margin-right: 5px;
-
-					&:last-of-type {
-						margin-right: 0;
-					}
-				}
-			}
+			width: 100%;
+			border-bottom-width: 1px;
+			border-bottom-style: solid;
+			// border-bottom-color: $brand-accent-primary;
+			border-image: linear-gradient(to right, $brand-primary 0%, $brand-tertiary 100%), linear-gradient(to right, $brand-primary 0%, $brand-tertiary 100%);
 		}
 
-		.recent-match-information {
-			transition: 0.5s;
-			margin-top: 90px;
-			padding-left: 18px;
-			color: white;
-			font-weight: 100;
-			font-size: 20px;
-
-
-			.no-col-padding {
-				padding: 0;
-			}
-
-			.match-overview {
-				.match-mode, .match-map {
-					font-weight: 600;
-					font-size: 22px;
-				}
-
-				white-space: nowrap;
-				overflow: hidden;
-				text-overflow: ellipsis;
-			}
-
-			.view-match {
-				font-weight: 600;
-				font-size: 15px;
-				text-align: right;
-				line-height: 2.1;
-			}
-
-			.details-seperator {
-				> hr {
-					margin-top: 10px;
-					margin-bottom: 10px;
-				}
-			}
-
-			.match-details {
-				margin-top: 5px;
-				padding-top: 5px;
-				border-top: 1px solid $seperator-light;
-				height: 57px;
-				overflow: hidden;
-
-				.match-statistic {
-					display: inline-block;
-					margin-right: 40px;
-					font-weight: 500;
-
-					&:last-of-type {
-						margin-right: 0;
-					}
-
-					.value {
-						font-weight: 600;
-						font-size: 40px;
-						color: $brand-accent-primary;
-					}
-					.key {
-						display: inline-block;
-						margin-left: 5px;
-
-						span {
-							display: block;
-						}
-						.header-key {
-							color: white;
-							font-size: 16px;
-						}
-						.sub-key {
-							color: $text-light-grey;
-							font-size: 14px;
-						}
-					}
-				}
-			}
-
-
-			@media (min-width: $fifth-restructure-point - 1) and (max-width: $first-restructure-point) {
-				.view-match,
-				.match-statistic.featured-stat,
-				.match-statistic.medals {
-					display: none !important;
-				}
-			}
-			@media (max-width: $fifth-restructure-point) {
-				.view-match,
-				.match-statistic.featured-stat,
-				.match-statistic.medals {
-					display: block !important;
-				}
-
-				.match-details {
-					display: flex;
-					justify-content: center;
-
-					> .match-statistic {
-						margin-right: 40px !important;
-					}
-				}
-			}
-		}
-
-		.player-visual-flairs {
-			transform: 0.5s;
-
-			@media (max-width: $third-restructure-point) {
-				display: none;
-			}
-
-			> .emblem-flair {
-				background-repeat: no-repeat;
-				height: 120px;
-				margin-top: -300px;
-				transform: scaleX(-1);
-			}
-			> .spartan-flair {
-				background-repeat: no-repeat;
-				background-position-x: left;
-				height: 358px;
-				margin-top: -120px;
-				transform: scaleX(-1);
-			}
-		}
-
-
-		@media (max-width: $fifth-restructure-point) {
-			.recent-match-index {
-				display: flex;
-				justify-content: center;
-			}
-
-			.player-information {
-				margin-top: 90px;
-				text-align: center;
-			}
-		}
-	}
-
-	.experience-bar {
-		background: #f9f9fb;
-		border-bottom: 1px solid #ebebeb;
-		height: 75px;
-		padding: 0;
-
-		> .fluid-container {
-			padding-top: 0;
-
-			> .profiles {
-				padding: 0;
-				margin-top: -3px;
-
-
-				> .profile {
-					display: inline-block;
-					padding-left: 75px;
-					padding-top: 3px;
-					padding-right: 20px;
-					margin-right: 5px;
-					height: 75px;
-
-					transition: 0.5s;
-					cursor: pointer;
-
-					background-size: 35px;
-					background-repeat: no-repeat;
-					background-position: 20px center;
-
-
-					@media (max-width: $first-restructure-point) {
-						background-size: 0px;
-						padding-left: 20px;
-						margin-right: 0;
-					}
-
-
-					> a {
-						display: inline-flex;
-						align-items: center;
-						text-overflow: ellipsis;
-						white-space: nowrap;
-						overflow: hidden;
-						height: 100%;
-						text-decoration: none !important;
-
-						> .col-md-10 { padding: 0; }
-
-						> .flair {
-							color: $brand-quaternary;
-
-							> h4 {
-								margin: 0;
-								padding: 0;
-								margin-bottom: 4px;
-								font-weight: 600;
-								color: $brand-secondary;
-							}
-						}
-					}
-
-					&.xbox-live,
-					&.destiny {
-						max-width: 192px;
-					}
-					&.halo,
-					&.titanfall {
-						max-width: 267px;
-					}
-
-					&.xbox-live { background-image: image-url('profiles/xbox-live.png'); }
-					&.halo { background-image: image-url('profiles/halo.png'); }
-					&.destiny { background-image: image-url('profiles/destiny.png'); }
-					&.titanfall { background-image: image-url('profiles/titanfall.png'); }
-					&:hover { color: $brand-tertiary; }
-					&.active {
-						color: $text-light-grey;
-						border-bottom: 4px solid $brand-tertiary;
-						margin-top: -4px;
-					}
-
-					> .popover {
-						border-color: $brand-quaternary;
-						box-shadow: 0 5px 10px rgba($brand-quaternary, .9);
-
-						> .popover-content {
-							> .profile {
-								border-bottom: 1px solid #eee;
-								padding-top: 10px;
-								padding-bottom: 10px;
-								height: 40px;
-								padding-left: 55px;
-
-								background-size: 25px;
-								background-repeat: no-repeat;
-								background-position: 10px center;
-
-								&:last-of-type {
-									border: 0;
-								}
-
-								> a {
-									text-decoration: none !important;
-
-									> h4 {
-										color: $brand-quaternary;
-										margin: 0;
-										padding: 0;
-										margin-bottom: 4px;
-										font-weight: 600;
-										color: $brand-secondary;
-									}
-								}
-
-								&.halo-3 { background-image: image-url('profiles/halo-3.png'); }
-								&.halo-3-odst { background-image: image-url('profiles/halo-3-odst.png'); }
-								&.halo-reach { background-image: image-url('profiles/halo-reach.png'); }
-								&.halo-4 { background-image: image-url('profiles/halo-4.png'); }
-								&.halo-5 { background-image: image-url('profiles/halo-5.png'); }
-								
-								&.titanfall { background-image: image-url('profiles/titanfall.png'); }
-								&.titanfall-2 { background-image: image-url('profiles/titanfall.png'); }
-							}
-						}
-					}
-				}
-			}
-
-			> .socials {
-				text-align: right;
-				padding: 0;
-
-				ul {
-					margin: 0;
-					padding: 0;
-
-					> li {
-						color: #c4c0cd;
-						font-size: 22px;
-						text-align: center;
-						line-height: 3.5;
-
-						display: inline-block;
-						margin: 0;
-						padding: 0;
-						margin-left: 14px;
-						margin-right: 14px;
-						width: 22px;
-
-						transition: 0.5s;
-						cursor: pointer;
-
-						@media (max-width: $first-restructure-point) {
-							margin-right: 5px;
-							margin-left: 5px;
-						}
-
-						&:hover {
-							color: $brand-primary;
-						}
-					}
-				}
-			}
-
-			@media (max-width: $third-restructure-point) {
-				.profiles {
-					display: flex;
-					justify-content: center;
-
-					width: 100%;
-
-					.profile.active {
-						margin-top: 2px !important;
-					}
-				}
-
-				.socials {
-					display: none !important;
-				}
-			}
-		}
-
-		&.affix {
-			top: 70px;
-			left: 0;
-			right: 0;
-
-			z-index: 1029;
-		}
-
-		&.experience-bar.affix + .page-content {
-			padding-top: 99px
-		}
-	}
-
-	.experience-sidebar {
-		margin-top: 40px;
-
-		.nav {
-			font-size: 14px;
-			color: $text-grey;
-			transition: 0.5s;
-
-			> li {
-				padding-left: 20px;
-
-				&:hover, &:focus, &.active {
-					border-left: 2px solid $brand-primary;
-					color: $brand-primary;
-					padding-left: 18px;
-
-					> a, a:hover, a:focus {
-						color: $brand-primary;
-					}
-				}
-
-				> a {
-					padding: 5px 0;
-					margin: 0;
-					color: $text-grey;
-
-					&:hover {
-						background: none;
-						color: $brand-primary;
-					}
-				}
-
-				> ul > li {
-					padding-left: 10px;
-
-					&:hover, &:focus, .active {
-						padding-left: 8px;
-						border-left: none; // We already have a border from the parent
-					}
-
-					> a {
-						padding: 2px 0;
-					}
-				}
-
-				&.nav-header {
-					color: $brand-primary;
-					font-size: 18px;
-					font-weight: 600;
-					border-left: 2px solid $brand-primary;
-					padding-left: 18px;
-
-					display: block;
-					background-repeat: no-repeat;
-					background-size: 35px;
-					background-position: left center;
-				}
-			}
-		}
-
-		#slide-into-waypoint {
+		&.service-record-stats {
 
 		}
-	}
-
-	.placeholder {
-		height: 1000px;
 	}
 }
