--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -14,6 +14,7 @@ $anchor-secondary-active: $brand-accent-secondary;
 
 $text-light-grey: #d0d0d0;
 $text-grey: #999;
+$text-dark: #1b1b1b;
 
 $seperator-light: #eee;
 
@@ -30,6 +31,7 @@ $large-devices-width: 1200px;
 @import 'partials/fluid-container.scss';
 
 @import 'base/footer.scss';
+@import 'base/experience_bar.scss';
 @import 'base/navbar.scss';
 
 @import 'styles/home.scss';
