Renamed no-padding classes

--- a/app/views/halo4/partials/_service_record_header.html.erb
+++ b/app/views/halo4/partials/_service_record_header.html.erb
@@ -19,15 +19,15 @@
 
 			<div class="col-md-offset-0 col-md-4 recent-match-information">
 				<% if has_recent_matches() %>
-					<div class="match-overview col-xs-9 no-col-padding">
+					<div class="match-overview col-xs-9 no-p">
 						<span class="match-mode"><%= @recent_matches['games'][0]['variantName'] %></span>
 						on
 						<span class="match-map"><%= @recent_matches['games'][0]['mapVariantName'] %></span>
 					</div>
-					<div class="view-match col-md-3 no-col-padding">
+					<div class="view-match col-md-3 no-p">
 						<a class="alt" href="#">View Details</a>
 					</div>
-					<div class="match-details col-xs-12 no-col-padding">
+					<div class="match-details col-xs-12 no-p">
 						<div class="match-statistic personal-score">
 							<span class="value"><%= number_with_delimiter(@recent_matches['games'][0]['personalScore']) %></span>
 							<div class="key">
