fixed url in halo 4 sidebar

--- a/app/views/halo4/partials/_experience_sidebar.html.erb
+++ b/app/views/halo4/partials/_experience_sidebar.html.erb
@@ -24,7 +24,7 @@
 
 <hr />
 
-<a id="slide-into-waypoint" class="alt" target="_blank" href="https://app.halowaypoint.com/en-US/Halo4/<%= @identity['gamertag'] %>/wargames/">
+<a id="slide-into-waypoint" class="alt" target="_blank" href="https://app.halowaypoint.com/en-US/Halo4/<%= @identity['gamertag'] %>/">
 	<i class="fa fa-share" aria-hidden="true"></i>
 	Go To Waypoint
 </a>
