Renamed experience-sidebar to sidebar

--- a/app/assets/stylesheets/styles/halo-4/_sidebar.scss
+++ b/app/assets/stylesheets/styles/halo-4/_sidebar.scss
@@ -1,4 +1,4 @@
-.experience-sidebar {
+.sidebar {
 	.nav {
 		font-size: 14px;
 		color: $text-grey;
@@ -57,6 +57,6 @@
 	}
 
 	#slide-into-waypoint {
-
+		margin-left: 23px;
 	}
 }
