added margin-top to footer

--- a/app/assets/stylesheets/base/_footer.scss
+++ b/app/assets/stylesheets/base/_footer.scss
@@ -3,6 +3,7 @@ footer {
 	background-repeat: repeat-x;
 	background-position: top center;
 	padding-top: 104px;
+	margin-top: 90px;
 
 	> .content {
 		background: $brand-primary;
