Renamed and updated css for halo 4. Fixed media queries

--- a/app/assets/stylesheets/styles/halo_4/home.scss
+++ b/app/assets/stylesheets/styles/halo_4/home.scss
@@ -2,10 +2,6 @@
 	
 // }
 
-#halo4-service-record {
-	@import 'header.scss';
-}
-
 article.halo-4 {
 	@import 'sidebar.scss';
 
@@ -14,7 +10,6 @@ article.halo-4 {
 	}
 }
 
-#halo4-service-record {
-	@import 'service-record.scss';
-}
+@import 'header.scss';
+@import 'service_record.scss';
 
