--- a/app/views/partials/_experience_bar.html.erb
+++ b/app/views/partials/_experience_bar.html.erb
@@ -84,7 +84,7 @@
 			</a>
 		</div>
 	</div>
-	<div class="col-md-2 hidden-xs hidden-sm socials">
+	<div class="socials col-md-2 hidden-xs hidden-sm">
 		<ul>
 			<li><i class="fa fa-reddit-alien" aria-hidden="true"></i></li>
 			<li><i class="fa fa-facebook" aria-hidden="true"></i></li>
